gnome-shell (3.4.2-9) UNRELEASED; urgency=low

  * debian/patches/60-gnome-bluetooth-3.8.patch:
    + Adapt to gnome-bluetooth's 3.8 api change. Closes: #712861.
  * debian/control.in:
    + Require gnome-bluetooth 3.8.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 20 Jun 2013 12:11:38 +0200

gnome-shell (3.4.2-8) unstable; urgency=low

  * debian/patches/0001-st-theme-node-drawing-Don-t-use-GL-types.patch:
    + Patch from upstream git, don't use GL types as cogl doesn't expose
      GL headers in newer releases. This will ease the cogl transition.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 26 May 2013 17:55:08 +0200

gnome-shell (3.4.2-7) unstable; urgency=low

  [ Michael Biebl ]
  * 40-force-online.patch: Use correct icon name "network-wired" when the
    global online state is set to connected.

  [ Laurent Bigonville ]
  * debian/patches/50-remove-folks-integration.patch: Remove folks integration,
    it might cause some slow startup time and cause Dbus call to timeout
    (Closes: #693155)

 -- Laurent Bigonville <bigon@debian.org>  Sat, 09 Feb 2013 14:20:45 +0100

gnome-shell (3.4.2-6) unstable; urgency=low

  [ Josselin Mouette ]
  * 28_network_user_connections.patch: new patch. Set connections and 
    passwords as user-owned, following matching changes in nm-applet and 
    gnome-control-center. The logic is:
    - Wired connections: always system-owned.
    - Modem (GSM/UMTS) connections are created by the control center.
    - Bluetooth PAN connections are now always user-owned.
    - Wireless connections are system-owned if the user has permissions 
      (in Debian this means group sudo or netdev). Otherwise, it is 
      user-owned, with the password in the keyring only for WPA.
    - 802.1x (wired or wireless) is always handled by the control 
      center.
    Closes: #696257

  [ Michael Biebl ]
  * Refresh patches to apply without fuzz.
  * 40-force-online.patch: If NM has an active unmanaged device it will